@@ -115,7 +115,6 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
                     <includes>
                         <include>**/*Tests.java</include>
                     </includes>
-                    <argLine>@{argLine} -Xmx1024m -XX:MaxPermSize=256m</argLine>
                 </configuration>
             </plugin>
         </plugins>
